--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+:root {
+  --animate-duration: 300ms;
+}
 
 body, p {
 	color: #4d5055; 
@@ -41,16 +44,16 @@ a:hover {
 }
 
 .btn-primary {
-	background-color: #0b36a8 !important;
+	background-color: #1E84EC !important;
 	font-weight: 600 !important;
 }
 
 .btn-main {
 	display: inline-block;
 	padding: 10px 40px;
-	border: 1px solid #0b36a8;
+	border: 1px solid #1E84EC;
 	border-radius: 40px;
-	background-color: #0b36a8;
+	background-color: #1E84EC;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 16px;
@@ -87,12 +90,12 @@ a:hover {
 }
 
 .fa-stack .fa-stack-2x {
-	color: #0b36a8;
+	color: #1E84EC;
 	transition: all 0.2s ease;
 }
 
 .fa-stack:hover .fa-stack-1x {
-	color: #0b36a8;
+	color: #1E84EC;
 }
 
 .fa-stack:hover .fa-stack-2x {
@@ -236,6 +239,10 @@ a:hover {
 	text-align: center;
 }
 
+.about .img img {
+	border-radius: 5px;
+}
+
 .icons-container img {
 	width: 40px;
 	margin-left: 10px;
@@ -266,6 +273,16 @@ a:hover {
 	border: 0;
 }
 
+.project-container img {
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.modal-image, .project-image-modal {
+	border-radius: 10px;
+	overflow: hidden;
+}
+
 
 /*******************/
 /*     Contact     */
@@ -283,7 +300,7 @@ a:hover {
 .contact-info a {
 	font-weight: 600;
 	margin: 5px auto;
-	color: #0b36a8;
+	color: #1E84EC;
 }
 
 
@@ -315,7 +332,7 @@ a.back-to-top {
 }
 
 a:hover.back-to-top {
-	background-color: #0b36a8;
+	background-color: #1E84EC;
 }
 
 /*************************/
@@ -328,9 +345,9 @@ a:hover.back-to-top {
 	.btn-main {
 		display: inline-block;
 		padding: 15px 55px;
-		border: 1px solid #0b36a8;
+		border: 1px solid #1E84EC;
 		border-radius: 40px;
-		background-color: #0b36a8;
+		background-color: #1E84EC;
 		color: #ffffff;
 		font-weight: 600;
 		font-size: 18px;
@@ -428,6 +445,6 @@ a:hover.back-to-top {
 	.contact-info a {
 		font-weight: 600;
 		margin: auto 8px;
-		color: #0b36a8;
+		color: #1E84EC;
 	}
 }
