--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ a:hover {
     font-family: 'Pacifico', cursive;
 }
 
+.fw-normal {
+	font-weight: 400;
+}
+
 .inner-icon {
 	position: absolute;
 	z-index: 104;
@@ -223,7 +227,7 @@ a:hover {
 /******************/
 .header {
 	padding: 120px 0 80px 0;
-	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/headerme.png') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/headerme.jpg') center center no-repeat;
 	background-size: cover;
 	text-align: center;
 }
@@ -268,6 +272,17 @@ a:hover {
 .icons-container img {
 	width: 40px;
 	margin-left: 10px;
+}
+
+.about ul {
+	list-style: none;
+	padding-left: 0;
+}
+
+.about li::before {
+    content: "\2713";
+    font-weight: bold;
+    padding-right: 5px;
 }
 
 
@@ -323,7 +338,7 @@ a:hover {
 .contact-info a {
 	font-weight: 600;
 	margin: 5px auto;
-	color: #1E84EC;
+	color: #4d5055 !important;
 }
 
 
