--- a/css/styles.css
+++ b/css/styles.css
@@ -317,12 +317,45 @@ a:hover {
 	overflow: hidden;
 }
 
+.freelance .container-fluid {
+	border-radius: 20px;
+}
+
+.freelance h4 {
+	line-height: 1.5;
+	font-weight: 600;
+}
+
+.github-project a {
+	transition: .3s;
+}
+
+.github-project a:hover {
+	transform: translateY(-5px);
+}
+
+/*******************/
+/*     Contact     */
+/*******************/
+.freelance {
+	padding: 100px 0;
+	text-align: center;
+}
+
+.freelance a {
+	transition: .3s;
+}
+
+.freelance a:hover {
+	transform: translateY(5px);
+}
+
 
 /*******************/
 /*     Contact     */
 /*******************/
 .contact {
-	padding: 100px 0;
+	padding: 0 0 100px 0;
 	text-align: center;
 }
 
@@ -335,6 +368,25 @@ a:hover {
 	font-weight: 600;
 	margin: 5px auto;
 	color: #4d5055 !important;
+}
+
+.contact-info {
+	margin: auto 50px;
+}
+
+.contact-detail {
+	transition: .3s;
+	padding: 16px;
+	border-radius: 10px;
+}
+
+.contact-detail:hover {
+	transform: translateY(-5px);
+	box-shadow: 0px 20px 60px rgb(42 61 126 / 8%);
+}
+
+.contact-detail i {
+	position: relative;
 }
 
 
