--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ a:hover {
 .page-header h2 {
 	margin-bottom: 15px;
 	text-align: center;
+	font-weight: 700;
 }
 
 .page-header p {
@@ -223,7 +224,7 @@ a:hover {
 /******************/
 .header {
 	padding: 120px 0 80px 0;
-	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/headerme.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url('../images/headerme.jpg') center center no-repeat;
 	background-size: cover;
 	text-align: center;
 }
@@ -443,8 +444,7 @@ a:hover.back-to-top {
 
 	/* Header */
 	.header {
-		padding-top: 11rem;
-		padding-bottom: 9rem;
+		padding: 250px 0;
 	}
 
 	/* about */
