--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,8 @@ a:hover {
 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url('../images/headerme.jpg') center center no-repeat;
 	background-size: cover;
 	text-align: center;
+	background-attachment: fixed;
+	background-position: left;
 }
 
 .header .text-container {
