--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@ h6 {
 	font-family: "Poppins";
 }
 
+li {
+	list-style: none;
+	margin-bottom: .4em;
+}
+
 .badge {
 	font-size: 12px !important;
 	padding: 4px 12px !important;
@@ -115,7 +120,6 @@ a:hover {
 
 .fa-stack {
 	width: 2em;
-	margin-right: 0.375rem;
 	font-size: 1.5rem;
 }
 
@@ -283,7 +287,7 @@ a:hover {
 /*     About     */
 /*****************/
 .about {
-	padding: 100px 0;
+	padding: 100px 0 200px 0;
 }
 
 .about .text-container {
@@ -300,16 +304,14 @@ a:hover {
 	margin-left: 10px;
 }
 
-/* .about ul {
-	list-style: none;
-	padding-left: 0;
+.skills {
+	background: #FFF;
+	border-radius: .8em;
+	border: 1px solid #f7f9fb;
+	padding: 2em;
+	margin-top: -200px;
+	text-align: center;
 }
-
-.about li::before {
-    content: "\2713";
-    font-weight: bold;
-    padding-right: 5px;
-} */
 
 
 /********************/
@@ -317,6 +319,8 @@ a:hover {
 /********************/
 .projects {
 	padding: 100px 0;
+	overflow-x: hidden;
+	text-align: center;
 }
 
 .projects .project-container {
@@ -492,6 +496,18 @@ a:hover.back-to-top {
 		text-align: left;
 	}
 
+	.skills {
+		text-align: left;
+	}
+
+	.skills li {
+		list-style:circle;
+	}
+
+	.projects {
+		text-align: left;
+	}
+
 }
 
 
@@ -581,23 +597,4 @@ a:hover.back-to-top {
 		color: #1E84EC;
 	}
 
-	/* .projects .project-container .description {
-		position: relative;
-		z-index: 999;
-		box-shadow: 0px 20px 60px rgb(42 61 126 / 20%);
-		padding: 24px;
-		margin-left: -50px;
-		background: #FFF;
-		border-radius: .5em;
-	}
-
-	.projects .project-container .description.right {
-		margin-left: -100px;
-	}
-
-	.projects .project-container .description.left {
-		margin-right: -100px;
-	} */
-
-		
 }
