--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,6 @@ a:hover {
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 0.875rem;
-	box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.025);
 }
 
 .navbar .container {
@@ -172,22 +171,17 @@ a:hover {
 .offcanvas-collapse {
 	position: fixed;
 	top: 0;
-	bottom: 0;
-	left: 100%;
+	left: 0;
 	width: 100%;
+	height: 100vh;
 	padding: 0 1rem 0 1rem;
-	overflow-y: auto;
-	visibility: hidden;
 	background-color: #24262a;
-	transition: visibility .3s ease-in-out, -webkit-transform .3s ease-in-out;
-	transition: transform .3s ease-in-out, visibility .3s ease-in-out;
-	transition: transform .3s ease-in-out, visibility .3s ease-in-out, -webkit-transform .3s ease-in-out;
+	clip-path: circle(0% at 92% 2%);
+	transition: all .7s ease-in-out;
 }
 
 .offcanvas-collapse.open {
-	visibility: visible;
-	-webkit-transform: translateX(-100%);
-	transform: translateX(-100%);
+	clip-path: circle(125% at 90% 13%);
 }
 
 .navbar .navbar-nav {
@@ -470,6 +464,7 @@ a:hover.back-to-top {
 		line-height: 1rem;
 		text-decoration: none;
 		display: inline;
+		letter-spacing: 3px;
 	}
 
 	.btn-main {
