--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-	color: #24262a;
+	/* color: #24262a !important; */
 	font-weight: 700;
 	font-family: "Poppins";
 }
@@ -42,6 +42,21 @@ li {
 .sea-blue-color {
 	background: #00758F;
 	color: #FFF;
+}
+
+.reactjs-color {
+	background: #61DBFB;
+	color: #24262a
+}
+
+.redux-color {
+	background: #764ABC;
+	color: #FFF;
+}
+
+.mui-color {
+	background: #017AFF;
+	color: #24262a
 }
 
 a {
@@ -89,21 +104,21 @@ a:hover {
 
 .btn-main {
 	display: inline-block;
-	padding: 10px 40px;
-	border: 1px solid #1E84EC;
+	padding: 8px 25px;
+	border: 1px solid #FFF;
 	border-radius: 40px;
-	background-color: #1E84EC;
+	background-color: transparent;
 	color: #ffffff;
 	font-weight: 600;
-	font-size: 16px;
+	font-size: 12px;
 	text-decoration: none;
 	transition: all 0.2s;
 }
 
 .btn-main:hover {
-	background-color: transparent;
+	background-color: #1E84EC;
 	color: #FFF !important;
-	border: 1px solid #FFF;
+	border: 1px solid #1E84EC;
 	text-decoration: none;
 }
 
@@ -250,10 +265,11 @@ a:hover {
 /******************/
 .header {
 	padding: 120px 0 80px 0;
-	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url('../images/headerme.jpg') center center no-repeat;
+	/* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url('../images/headerme.jpg') center center no-repeat;
 	background-size: cover;
 	text-align: center;
-	background-position: right;
+	background-position: right; */
+	background-color: #24262a;
 }
 
 .header .text-container {
@@ -470,9 +486,9 @@ a:hover.back-to-top {
 	.btn-main {
 		display: inline-block;
 		padding: 15px 55px;
-		border: 1px solid #1E84EC;
+		border: 1px solid #FFF;
 		border-radius: 40px;
-		background-color: #1E84EC;
+		background-color: transparent;
 		color: #ffffff;
 		font-weight: 600;
 		font-size: 18px;
@@ -514,7 +530,7 @@ a:hover.back-to-top {
 	}
 
 	.header .h1-large {
-		font-size: 52px;
+		font-size: 86px;
 		color: #ffffff;
 	}
 
